# dealrs-web

./: .gitattributes  Cargo.toml  Dioxus.toml  README.md  justfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tailwind.css
.github/workflows/: ci-build.yml
assets/: GENERATED_tailwind.css
src/: build.rs  main.rs
src/components/: card.rs  deal.rs  footer.rs  mod.rs
